2011-10-12  Murray Cumming  <murrayc@murrayc.com>

	examples: Fix linker problems.

	* Makefile.am: Some examples used GTK+ but didn't link to it.
	USe LIBEPC_UI_LIBS for these.

2011-08-31  Ionut Biru <ibiru@archlinux.org>

  Avoid use of deprecated G_CONST_RETURN
    
  * libepc/enums.c.in: Avoid use of deprecated G_CONST_RETURN.
  Bug #660558

	=== Release 0.4.1 ===
	
2011-08-31  Murray Cumming  <murrayc@murrayc.com>

	Really use GTK+ 3.

	* configure.ac: Check for gtk+-3.0 for libepc-ui.
	* examples/consumer-ui.c:
	* examples/publisher-ui.c: Port to GTK+ 3, though I just removed the 
	GtkAboutBox url hook.
	Bug #657679 (Frederic Peters)

2011-06-15  Murray Cumming  <murrayc@murrayc.com>

	Avoid use of deprecated G_CONST_RETURN.

	* libepc-ui/password-dialog.[h|cc]:
	* libepc/consumer.[h|cc]:
	* libepc/contents.[h|cc]:
	* libepc/dispatcher.[h|cc]:
	* libepc/protocol.[h|cc]:
	* libepc/publisher.[h|cc]:
	* libepc/service-info.[h|cc]:
	* libepc/service-type.[h|cc]:
	* libepc/shell.[h|cc]: Use const instead.

	=== Release 0.4.0 ===

2010-05-12  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with --enable-compiler-warnings=error

	* libepc-ui/progress-window.c
	* examples/consumer-ui.c: Remove ifdefed code for older versions
	of GTK+. We use GTK+ 3 now anyway. This was causing a compiler
	warning about extra tokens after #ifdef.

2010-05-12  Christopher Dale  <chrelad@gmail.com>

	Use avahi-ui-gtk3 rather than avahi-ui-gtk.
	Bug #649404

	This breaks ABI, but this is an unstable library anyway (murrayc).

2010-03-24  David King  <davidk@openismus.com>

	Fix compilation with GSEAL_ENABLE defined

	* examples/consumer-ui.c:
	* libepc-ui/password-dialog.c:
	* libepc-ui/progress-window.c: Update for compilation with GSEAL_ENABLE
	defined.

	=== Release 0.3.10 ===

2010-03-23  David King  <davidk@openismus.com>

	Fix several compiler warnings

	* libepc/publisher.c:
	* examples/lookup-resource.c: